# forthscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  callgrind.out.15197  callgrind.out.22843  callgrind.out.23212  fib  fib.py  helloworld  out.dot  test  test.ost  test_root
.github/workflows/: c-cpp.yml
api/: overstacked.h
examples/debugger/: main.fscript
examples/expressions_compiler/: main.fscript
examples/game_of_life/: game_of_life.ost  main.fscript
examples/test_driver/: main.fscript  test_driver.ost
examples/test_json_generator/: test_json_generator.ost
include/: ConvertUTF.h  callstack.hpp  dbg.hpp  evalstack.hpp  expect.hpp  heap.hpp  interpreter.hpp  linenoise.h  linenoise.hpp  symtable.hpp  values.hpp
include/api/: dll.hpp  provider.hpp
include/core/: callstack.hpp  evalstack.hpp  heap.hpp  interpreter.hpp  stringpool.hpp  symtable.hpp  values.hpp
include/io/: encodings.hpp  fileio.hpp  glob.hpp  lexer.hpp  parser.hpp  prettyprint.hpp  processes.hpp  strings.hpp  termio.hpp
include/parser/: lexer.hpp  strings.hpp
include/prelude/: repl.hpp
include/std/: arith.hpp  arrays.hpp  boolean.hpp  comparisons.hpp  controlflow.hpp  indexing.hpp  operators.hpp  os.hpp  stack.hpp  strings.hpp  templates.hpp  typing.hpp
src/: callstack.cpp  evalstack.cpp  heap.cpp  interpreter.cpp  main.cpp  symtable.cpp  values.cpp
src/api/: dll.cpp  provider.cpp
src/core/: callstack.cpp  evalstack.cpp  heap.cpp  interpreter.cpp  symtable.cpp  values.cpp
src/io/: encodings.cpp  fileio.cpp  glob.cpp  lexer.cpp  parser.cpp  prettyprint.cpp  processes.cpp  strings.cpp  termio.cpp
src/linenoise/: ConvertUTF.cpp  linenoise.cpp
src/parser/: lexer.cpp  parser.cpp
src/prelude/: repl.cpp  repl.fscript
src/std/: arith.cpp  arrays.cpp  boolean.cpp  comparisons.cpp  controlflow.cpp  indexing.cpp  operators.cpp  os.cpp  stack.cpp  strings.cpp  templates.cpp  typing.cpp
tests/: helper.py  simpleCases.json  test.py
tests/cases/1/: input.txt
tests/cases/2/: input.txt
tests/cases/abs/: input.txt  main.fscript
tests/cases/brainfuck/: input.txt  main.fscript
tests/cases/is_prime/: expectedOutput.txt  input.txt  main.fscript
tests/cases/pow_func_gen/: input.txt  main.fscript  output.txt
tests/cases/quicksort/: expectedOutput.txt  input.txt  main.fscript  unsorted.fscript
tests/cases/rot13/: input.txt
tests/simpleCases/: arithmetic.json  comparisons.json  func_chr.json  func_dup.json  func_len.json  func_ord.json  func_peek.json  func_poke.json  func_slice.json  func_swap.json
